Update zh_cn.json of Atlantis 1.20.1 forge
Added translation names for the dimension, the biomes and the structures of Atlantis.

添加了《亚特兰蒂斯》的维度、生物群系与结构译名。

--- a/src/main/resources/assets/atlantis/lang/zh_cn.json
+++ b/src/main/resources/assets/atlantis/lang/zh_cn.json
@@ -1,4 +1,11 @@
 {
+  "biome.atlantis.atlantean_garden": "亚特兰花园",
+  "biome.atlantis.atlantean_islands_biome": "亚特兰群岛",
+  "biome.atlantis.atlantis_biome": "亚特兰蒂斯",
+  "biome.atlantis.coconut_isles": "椰子群岛",
+  "biome.atlantis.goo_lagoons": "酷乐湖",
+  "biome.atlantis.jellyfish_fields": "水母田",
+  "biome.atlantis.volcanic_darksea": "火山暗海",
   "block.atlantis.algae": "海藻",
   "block.atlantis.algae_block": "海藻块",
   "block.atlantis.ancient_acacia_wood_moss": "长有苔藓的远古金合欢木 ",
@@ -756,6 +763,7 @@
   "block.atlantis.detritus_sandstone": "砂岩碎石",
   "container.linguistic": "语言",
   "container.writing": "书写",
+  "dimension.atlantis.atlantis": "亚特兰蒂斯",
   "effect.atlantis.spikes": "穗",
   "entity.atlantis.atlantean_crab": "亚特兰蟹",
   "entity.atlantis.atlantean_jellyfish": "1型水母",
@@ -794,7 +802,7 @@
   "item.atlantis.brown_wrought_helmet": "棕色锻造头盔",
   "item.atlantis.brown_wrought_leggings": "棕色锻造护腿",
   "item.atlantis.brown_wrought_patches": "棕色锻造补丁",
-  "item.atlantis.column_cavitation": "Music Disc",
+  "item.atlantis.column_cavitation": "音乐光碟",
   "item.atlantis.column_cavitation.desc": "Firel - column cavitation",
   "item.atlantis.cooked_shrimp": "熟虾",
   "item.atlantis.crab_bucket": "螃蟹桶",
@@ -856,7 +864,7 @@
   "item.atlantis.orichalcum_pickaxe": "黄铜镐",
   "item.atlantis.orichalcum_shovel": "黄铜铲",
   "item.atlantis.orichalcum_sword": "黄铜剑",
-  "item.atlantis.panbee": "Music Disc",
+  "item.atlantis.panbee": "音乐光碟",
   "item.atlantis.panbee.desc": "LudoCrypt - panbee",
   "item.atlantis.pickaxe_aquamarine": "海蓝宝石镐",
   "item.atlantis.salty_sea_water_bucket": "咸水桶",
@@ -871,6 +879,15 @@
   "item.atlantis.water_pill": "避水丸",
   "itemGroup.atlantis.general": "亚特兰蒂斯",
   "itemGroup.atlantis.glyph": "亚特兰蒂斯雕文",
+  "structure.atlantis.atlantean_village": "亚特兰村庄",
+  "structure.atlantis.configured_atlantean_city": "亚特兰城",
+  "structure.atlantis.configured_atlantean_fountain": "亚特兰喷泉",
+  "structure.atlantis.configured_atlantean_house_1": "亚特兰房屋1",
+  "structure.atlantis.configured_atlantean_house_3": "亚特兰房屋3",
+  "structure.atlantis.configured_atlantean_spire": "亚特兰尖塔",
+  "structure.atlantis.configured_atlantean_temple": "亚特兰神庙",
+  "structure.atlantis.configured_atlantean_tower": "亚特兰塔",
+  "structure.atlantis.configured_oyster_structure": "牡蛎结构",
   "text.autoconfig.atlantis.option.calciteAcceleration": "Calcite Acceleration",
   "text.autoconfig.atlantis.option.calciteThreshold": "Calcite Threshold",
   "text.autoconfig.atlantis.option.general.calciteAcceleration": "Calcite Acceleration",
